unpackaged/main/default/objects/Staging_Project__c/Staging_Project__c.object-meta.xml
<CustomObject>
    <description>Used for Data Migration</description>
    <label>Staging Project</label>
    <nameField>
        <displayFormat>SP-{000000}</displayFormat>
        <label>Staging Project Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>