unpackaged/main/default/objects/Staging_Project__c/fields/BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnit__c</fullName>
    <label>BusinessUnit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>