unpackaged/main/default/objects/Staging_Project__c/fields/Is_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Is_Subscription__c</fullName>
    <label>Is Subscription</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>