unpackaged/main/default/objects/Staging_Project__c/fields/Parent_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Project_Name__c</fullName>
    <label>Parent Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>