unpackaged/main/default/objects/Staging_Project__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Staging Projects</relationshipLabel>
    <relationshipName>Staging_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>