unpackaged/main/default/objects/Staging_Project__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <externalId>true</externalId>
    <label>Project ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>