unpackaged/main/default/objects/Staging_Project__c/fields/Project_ManagerFortX_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ManagerFortX_ID__c</fullName>
    <label>Project Manager.FortX ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>