unpackaged/main/default/objects/Staging_Project__c/fields/Project_ManagerInternal_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ManagerInternal_ID__c</fullName>
    <label>Project Manager.Internal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>