unpackaged/main/default/objects/Staging_Project__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <description>Full Projecty Name</description>
    <label>Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>