unpackaged/main/default/objects/Staging_Project__c/fields/RemainingHours__c.field-meta.xml
<CustomField>
    <fullName>RemainingHours__c</fullName>
    <description>Total hours remaining.</description>
    <label>Remaining Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>