unpackaged/main/default/objects/Staging_Project__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <defaultValue>'Active'</defaultValue>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>