unpackaged/main/default/objects/Staging_Project__c/fields/Sub_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Project_Type__c</fullName>
    <label>Sub-Project Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>