unpackaged/main/default/objects/Staging_Project__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if project is subscription billing type.</description>
    <label>Subscription</label>
    <type>Checkbox</type>
</CustomField>