unpackaged/main/default/objects/Staging_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Project__c</columns>
    <columns>Project_Name__c</columns>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Type__c</columns>
    <columns>Sub_Project_Type__c</columns>
    <columns>State__c</columns>
    <columns>Billing_Type__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Customer_Id__c</columns>
    <columns>Project_ID__c</columns>
    <columns>BusinessUnit__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>